commentaries added, unused code removed. Js paging implemented

--- a/CsvImportSite/Views/Home/ChangePayrollNumber.cshtml
+++ b/CsvImportSite/Views/Home/ChangePayrollNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@using CsvImportSite.ViewModels;
+﻿@using CsvImportSiteJS.ViewModels;
 @model ChangePayrollNumberViewModel;
 <hr />
 <h5>Change payroll number</h5>
