--- a/CsvImportSite/Views/_ViewImports.cshtml
+++ b/CsvImportSite/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using CsvImportSite
-@using CsvImportSite.Models
+﻿@using CsvImportSiteJS
+@using CsvImportSiteJS.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
